--- a/index.css
+++ b/index.css
@@ -11,14 +11,16 @@ hr {
 #main-card {
     width: 400px;
     position: relative;
-
     top: 50vh;
     transform: translateY(-50%);
+    transition: 0.7s;
     background-color: #191615;
     margin: 0 auto;
     padding: 5px;
     border-radius: 9px;
     text-align: center;
+    animation: fade-in;
+    animation-duration: 1.2s;
 }
 
 #main-content {
@@ -40,6 +42,7 @@ hr {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    color: #F148FB;
 }
 
 .link {
@@ -47,9 +50,21 @@ hr {
     color: #F148FB;
 }
 
+.link:hover{
+    color: #FFACFC;
+}
+
 canvas{
     display:block;
     vertical-align:bottom;
+}
+
+#name h1{
+    text-transform: uppercase;
+}
+#name span:nth-child(2){
+    overflow: hidden;
+    color: #fff;
 }
 
 #particles-js{
@@ -60,3 +75,20 @@ canvas{
     background-position: 50% 50%;
     background-repeat: no-repeat;
 }
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
+}
+
+@media screen and (max-width: 500px){
+    #main-card{
+        width: 80%;
+    }
+}
+
