--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@ hr {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    font-weight: bold;
     color: #F148FB;
 }
 
@@ -90,5 +91,17 @@ canvas{
     #main-card{
         width: 80%;
     }
+
+    #profile-image{
+        width: 120px;
+        height: 120px;
+    }
+
+    #name{
+        font-size: 28px;
+    }
+
+
+
 }
 
